# pypi-git-credential-manager

./: README.md  justfile  pyproject.toml
.github/workflows/: check-release.yml  ci.yml  pypi.yml
python/git_credential_manager/: __init__.py
scripts/: build_wheels.py  check_release.py
